gridle issues finally resolved