@@ -18,11 +18,18 @@ allprojects {
     tasks.withType(Test) {
         enabled = false
     }
-    tasks.withType(JavaCompile) {
+    
+    tasks.withType(JavaCompile).configureEach {
         options.encoding = 'UTF-8'
-        options.compilerArgs += [
-                '--add-exports', 'java.base/jdk.internal.ref=ALL-UNNAMED'
-        ]
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
+        options.compilerArgs.addAll([
+            '--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED',
+            '--add-opens=java.base/java.lang=ALL-UNNAMED',
+            '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
+            '--add-opens=java.base/java.io=ALL-UNNAMED',
+            '--add-opens=java.base/java.util=ALL-UNNAMED'
+        ])
     }
 }
 
